# htucker_incremental

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  4way_leaf_to_root.py  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.org  README.org.tmp  batch_compression_test.py  catgelCompressionComparison.py  check_turbulence_energy_spectrum.py  compare_HT_BHT_BigEarth.py  compare_HT_BHT_PDEBench.py  compress_BasaltMineRLHT.py  compress_BasaltMineRLTT.py  compress_BasaltMineRL_HT.py  compress_BasaltMineRL_TT.py  compress_BigEarthHT.py  compress_BigEarthTT.py  compress_BigEarthTTICE.py  compress_CatGel_HT.py  compress_CatGel_TT.py  compress_PDEBenchHT.py  compress_PDEBenchTT.py  compress_PDEBench_HT.py  compress_PDEBench_TT.py  convert_BigEarth_to_Numpy.py  convert_PDEBench_to_Numpy.py  denemelik.py  error_truncation_test.py  experiment_utils.py  minecraftCompression.py  minecraftCompressionHT.py  minimal_test.py  mypy.ini  nway_root_to_leaf.py  pyproject.toml  (+4 more)
.github/: stale.yml
docs/: pre-commit-guide.md
examples/: basic_example.py  batch_processing_example.py  check_turbulence_energy_spectrum.py  htucker_tutorial.ipynb  image_compression_example.py  incremental_update_example.py
htucker/: __init__.py  algs.py  core.py  decomposition.py  ht.py  tree.py  utils.py
paper_experiments/: README.md  compare_HT_BHT_BigEarth.py  compare_HT_BHT_PDEBench.py  compress_BasaltMineRL_HT.py  compress_BasaltMineRL_TT.py  compress_BigEarthHT.py  compress_BigEarthTT.py  compress_BigEarthTTICE.py  compress_CatGel_HT.py  compress_CatGel_TT.py  compress_PDEBench_HT.py  (+6 more)
(+21 files in other folders)
